app.css
*, *::before, *::after {
    box-sizing: border-box;
}

body {
   padding: 0;
   margin: 0;
   font-family: 'Inter', sans-serif;
   font-size: .8125rem;
   background: #F1F1F1;
}

header {
   background: #1A1A1A;
   text-align: center;
}

svg {
    width: 2rem;
    height: 2rem;
    display: block;
}

input {
    background: inherit; 
    border: none;
    color: #B5B5B5;
    line-height: 1.1375rem;
    outline: none;
}

.header__container {
    width: 90%;
    margin: 0 auto;
}

.nav__bar {
    display: flex;
    justify-content: space-between;
    width: 100%;
    gap: .5rem;
    padding: .75rem 1rem;
    line-height: 2rem;
    color: #616161;
}

.nav__bar--one {
    padding: .2rem;
}

.nav__bar--two {
    width: 70%;
    max-width: 238px;
    margin: 0 auto;
    display: flex;
    align-items: center;
}



.nav__bar--three {
    display: flex;
    justify-content: center;
    gap: .75rem;
    width: 20%;
}

.nav__bar--input {
    display: flex;
    border: 1px solid #616161;
    padding: .3rem;
    border-radius: 8px;
    width: 100%;
    align-items: center;
    background: linear-gradient(0deg, #303030, #303030);
}

.none {
    display: none;
}

.icon__box {
    display: flex;
    align-items: center;
}

.mini-icon {
    width: 1.25rem;
    height: 1.25rem;
}

.search {
    padding: .2rem;
}

.nav__bar--text {
    display: flex;
    align-items: center;
}

.nav__bar--initials {
    padding: 6px;
    margin: auto;
    font-weight: 500;
    font-size: .75rem;
    background-color: #36FBA1;
    border-radius: 8px;
    line-height: .9rem;
}

.box {
    position: relative;
}

.main--box {
    display: flex;
}

.main__section--one {
    background: #1A1A1A;
}

.main__section {
    position: relative;
    top: 3rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.main__section--one, .main__section--two, .main__three {
    width: 100%;
    max-width: 800px;
    border-radius: 8px;
}

.main__section--one {
    color: white;
    padding: .75rem 1rem;
}

.main--column {
    display: flex;
    flex-wrap: wrap;
}

.main--column--two {
    flex-direction: column;
    gap: 4px;
}

.main__one--p {
    width: 100%;
    line-height: 1.125rem;
}

.x-button {
    margin: 0;
    padding: 0;
}

.x-box {
    display: flex;
    align-items: flex-start;
    margin: 0;
    padding: 0;
}

.x-box svg {
    padding: .5rem 0 0 .5rem;
    margin-top: .7rem;
}

.main__section--two svg {
    padding: 0;
    margin: 0;
}

 button {
    background: inherit;
    border: none;
    height: fit-content;
 }
 
 .main__one--button {
    color: #323232;
    background: white;
    border-radius: 8px;
    font-size: .75rem;
    padding: .5rem
 }

 .main__one--button p {
    margin: 0;
    padding: 0 .3rem;
 }

 .main__three {
    display: none;
    background: white;
 }

 .main__section--two h3, .main__three h3 {
    margin: 0;
    padding-top: .7rem;
    font-weight: 600;
    font-size: .9rem;
    color: #303030; 
 }


 .main__section--two {
    background: white;
    padding: .75rem 1rem;
    position: relative;
    top: 1rem;
    border: 1px hsl(0, 0%, 86%);
    border-bottom: none;
    box-shadow: 0 1px 0 0 #0000000D;
 }

 #id__two::after {
    background-color: white;
    height: 10px;
    content: "";
    position: absolute;
    bottom: -1px;
    left: -1px;
    right: -1px;
 }
 
 .main__section--two path, .load stroke {
    fill: #4A4A4A;
 }

 .button__down {
    display: none;
 }

 .button__up {
    display: block;
 }

 .main__three--grid {
    padding: .5rem .5rem .8rem .5rem;
    display: flex;
    flex-direction: row;
 }

 .main__three--p {
    padding: 2px 0px 2px 0px;
    gap: 32px;
    color: #616161;

 }

 .main__three h3 {
    font-size: .8rem;
    font-weight: 600;
    line-height: 1.14rem;
 }

 .main__three p {
    font-size: .875rem;
    font-weight: 500;
    line-height: 1.25rem;
 }

.cust__button {
    background-color: #404040;
    border-radius: 6px;
    padding: 6px 12px 6px 12px;
    border: 1.5px 1.5px 0 1.5px #FFFFFF33;
    box-shadow: 0px 0px 0px 1.5px #333333;
    font-size: .75rem;
    font-weight: 600;
    line-height: 1rem;
    color: #F6F3F6;
}

